# openwrt-base-scripts

./: CMakeLists.txt  README.md
aws-iot-pubsub-client/: CMakeLists.txt  aws-iot-pubsub-client.c
aws-iot-pubsub-client/cmake/: toolchain-mipsel.cmake
base-configs/: CMakeLists.txt
blinkone-tool/: CMakeLists.txt  blink1-lib-lowlevel-hidapi.h
init-scripts/: CMakeLists.txt
misc-scripts/: CMakeLists.txt  ssh-running.sh  ssh-start.sh  ssh-stop.sh
usb-hid-relay/: CMakeLists.txt  README.md  gitversion.h
usb-relay/: CMakeLists.txt  usb-relay.c
usb-tty-relay/: CMakeLists.txt  usb-relay.c
utils/: CMakeLists.txt  check-wan.sh  display-data.sh  led-power.sh  temperature-relay-control.sh  usb-relay.sh  usb-status-led-blink.sh  usb-status-led.sh  usb-temper-read.sh  wan-http-access.sh  wan-ssh-access.sh  wifi-config.sh  wifi-control.sh  wifi-switch-over.sh
