cmake_minimum_required(VERSION 3.13)
set(PROJECT_NAME openwrt-base-scripts)
project(${PROJECT_NAME})
#set(DISP_AUTOTEST_UTILS_ONLY    OFF CACHE BOOL OFF)
#if(${DISP_AUTOTEST_UTILS_ONLY})
#add_subdirectory(ktc-test-scripts)
#else()
add_subdirectory(init-scripts)
add_subdirectory(utils)
add_subdirectory(base-configs)
#endif()
